<resources>
    <string name="app_name">MyAppPortfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="my_nanodegree_apps">My Nanodegree  Apps!</string>
    <string name="spotify_streamer">Spotify Streamer</string>
    <string name="scores_app">Scores App</string>
    <string name="library_app">Library App</string>
    <string name="build_it_bigger">Build it Bigger</string>
    <string name="bacon_reader">Bacon Reader</string>
    <string name="capstone">Capstone:\nMy Own App</string>
</resources>
