<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:backgroundTint="@color/udacity_backgroud_colour"
    android:transitionGroup="false">

    <TextView android:text="@string/my_nanodegree_apps" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elegantTextHeight="false"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
        android:layout_alignParentEnd="false"
        android:layout_centerHorizontal="true"
        android:id="@+id/TopTitle"
        android:layout_marginTop="10dp" />

    <Button
        style="@style/my_button_style"
        android:text="@string/spotify_streamer"
        android:id="@+id/SpotifyButton"
        android:background="@color/udacity_button_colour"
        android:onClick="spotifyStreamerToast"
        android:layout_below="@+id/TopTitle" />

    <Button
        style="@style/my_button_style"
        android:text="@string/scores_app"
        android:id="@+id/ScoresButton"
        android:background="@color/udacity_button_colour"
        android:onClick="scoresAppToast"
        android:layout_below="@+id/SpotifyButton" />

    <Button
        style="@style/my_button_style"
        android:text="@string/library_app"
        android:id="@+id/LubraryButton"
        android:background="@color/udacity_button_colour"
        android:onClick="libraryAppToast"
        android:layout_below="@+id/ScoresButton" />

    <Button
        style="@style/my_button_style"
        android:text="@string/build_it_bigger"
        android:id="@+id/BuilItBiggerButton"
        android:background="@color/udacity_button_colour"
        android:onClick="buildItBiggerToast"
        android:layout_below="@+id/LubraryButton"  />

    <Button
        style="@style/my_button_style"
        android:text="@string/bacon_reader"
        android:id="@+id/BaconReaderButton"
        android:background="@color/udacity_button_colour"
        android:onClick="baconReaderToast"
        android:layout_below="@+id/BuilItBiggerButton" />

    <Button
        style="@style/my_button_style"
        android:text="@string/capstone"
        android:id="@+id/CapstoneButton"
        android:onClick="capstoneToast"
        android:background="#ffff1031"
        android:layout_below="@+id/BaconReaderButton" />

</RelativeLayout>
